src/test/ui/hrtb/issue-46989.stderr
error[E0277]: the trait bound `for<'r> fn(&'r i32): Foo` is not satisfied
  --> $DIR/issue-46989.rs:38:18
   |
LL |     assert_foo::<fn(&i32)>();
   |                  ^^^^^^^^ the trait `Foo` is not implemented for `for<'r> fn(&'r i32)`
   |
   = help: the trait `Foo` is implemented for `fn(A)`
note: required by a bound in `assert_foo`
  --> $DIR/issue-46989.rs:35:18
   |
LL | fn assert_foo<T: Foo>() {}
   |                  ^^^ required by this bound in `assert_foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
